fix: change some keys and change code for shifts

--- a/src/style.scss
+++ b/src/style.scss
@@ -63,7 +63,7 @@ button {
     }
 
     &--super-wide {
-      width: 36%;
+      width: 38.3%;
       max-width: 500px;
     }
     &--active {
